--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="todo-list"></ul>
     </div>
 
-    <script src="/To-do/script.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
